[finishes #185035311][finishes #185035293] Fixed bug with cursor and fixed issue with horizontal scrolling

--- a/public/homePage.css
+++ b/public/homePage.css
@@ -66,6 +66,9 @@
  }
  
  @media screen and (max-width: 750px) { 
-   #columns { column-gap: 0px; }
+   #columns { 
+    column-gap: 0px;
+    margin-left: 0px;
+  }
    #columns figure { width: 100%; }
  }
